--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "package.json",
+  "name": "dsa-js",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "ts-node": "TS_NODE_COMPILER_OPTIONS=\"{\\\"module\\\":\\\"es2015\\\"}\" ts-node",
   "scripts": {
-    "dev": "vite",
+    "dev": "esrun",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
@@ -13,13 +12,14 @@
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "devDependencies": {
+    "@digitak/esrun": "^3.2.6",
+    "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.7.1",
     "eslint": ">=5.16.0",
     "eslint-config-google": "^0.14.0",
-    "ts-node": "^10.8.1",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vitest": "^0.14.2"
