--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "strict": true,
     "sourceMap": true,
     "resolveJsonModule": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "esModuleInterop": true,
     "noEmit": true,
     "noUnusedLocals": true,
@@ -16,8 +16,6 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "ts-node": {
-    "esm": true
-  },
-  "include": ["src"]
+  "include": ["./src/**/*"],
+  "ignore": ["node_modules"]
 }
