--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     "@typescript-eslint/no-unused-vars": "error",
     // to enforce using type for object type definitions, can be type or interface
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
-    "require-jsdoc": 0
+    "require-jsdoc": 0,
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/ban-ts-comment": "off"
   }
 }
