--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prepare": "husky install",
     "dev": "esrun",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "lint:fix": "yarn lint --fix",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "devDependencies": {
@@ -19,6 +21,8 @@
     "eslint": ">=5.16.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
